fix for attestation.id inner contents overlap

--- a/src/theme/modal.scss
+++ b/src/theme/modal.scss
@@ -51,7 +51,7 @@
   
 .modal-body-tn iframe {
   width: 100%;
-  min-height: 600px;
+  min-height: 620px;
   background-color: #fff;
   border: 6px solid #696969;
   border-radius: 3px;
@@ -59,13 +59,11 @@
   
 /* Modal Content */
 .modal-content-tn {
+  width: 430px;
   position: relative;
   background-color: transparent;
   margin: auto;
   padding: 0;
-
-  max-width: 600px;
-
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
